css/pmsr_overrides.css
/* HascoBarrio Theme Override */

body.pmsr-module-enabled #navbar-top.navbar,
#navbar-top.navbar {
  height: 176px!important; /* Ajuste conforme necessário */
  background: linear-gradient(
    to right,
    #ffffff 25%,
    #006600 100%
  );
  opacity: 0.9;
  overflow-x: hidden;
  border-bottom: 2px solid #00660096!important;
}

#main-wrapper {
  min-height: 63vh!important;
}

.site-footer {
  background-color: #ffffff!important;
  padding: 15px 0 0 0!important;
}

#partners_footer {
  background-color: #292929!important;
  padding: 15px 0 15px 0!important;
  color: #ffffff79!important;
  font-weight: 200!important;
  font-family: 'Roboto', sans-serif!important;
  font-size: 12px!important;
}

#landing_footer {
  background-color: #0066004b!important;
}

body.pmsr-module-enabled #navbar-main.navbar.navbar-expand-lg{
  background-color: #0066004b!important;
}

body.pmsr-module-enabled #navbar-main.navbar.navbar-expand-lg a{
  color: #000!important;
}

body.pmsr-module-enabled #navbar-main.navbar.navbar-expand-lg li.dropdown-item.active a.is-active {
  color: #ffffff!important;
  background-color: transparent!important;
}

body.pmsr-module-enabled #navbar-main.navbar.navbar-expand-lg a.active {
  font-weight: 600!important;
  background-color: #006600be!important;
  color: #ffffff!important;
}

body.pmsr-module-enabled img.img-fluid.d-inline-block.align-top {
  padding-left: 3rem!important;
  padding-right: 3rem!important;
}

body.pmsr-module-enabled #block-hasco-barrio-main-menu {
  padding-left: 3rem!important;
}

body.pmsr-module-enabled section.row.region.region-top-header-form {
  padding-right: 3rem!important;
}

.btn-primary {
  background-color: #006600ce!important;
}

.btn-primary:hover {
  background-color: #00660094!important;
}

.btn-info {
  background-color: #17a2b8!important;
}

.btn-info:hover {
  background-color: #17a3b8b7!important;
}

#cards-wrapper .edit-element-button,
.save-button {
  background-color: #0d6efd!important;
}

#cards-wrapper .edit-element-button:hover,
.save-button:hover {
  background-color: #074cb4!important;
}

.cancel-button {
  background-color: #be2b3a!important;
}

.cancel-button:hover {
  background-color: #c82333!important;
}

.page-item.active .page-link {
  background-color: #006600ce!important;
  border-color: #006600ce!important;
}

body.pmsr-module-enabled #navbar-main.navbar.navbar-expand-lg a {
  text-decoration: none!important;
}

body.pmsr-module-enabled li.dropdown-item.active,
body.pmsr-module-enabled li.dropdown-item:active {
  background-color: #006600be!important;
}

body.pmsr-module-enabled div.nav-pills .form-control.nav-link.active {
  background-color: #006600!important;
}

body.pmsr-module-enabled div.nav-pills .form-control.nav-link {
  background-color: #006600be!important;
  color: #f4f4f4!important;
}

